# PracaMgr

./: .gitignore  README.md  run.bat  run_exp.bat  run_test.bat
Backend/: CMakeLists.txt  main.cpp
Backend/bindings/: bindings.cpp
Backend/cpp/: adsr.cpp  mainModule.cpp  metrices.cpp  miniaudio_impl.cpp  modelModule.cpp  module.cpp  samplesModule.cpp  signal.cpp  synthModule.cpp  synthPipe.cpp  synthVoice.cpp  testModule.cpp  voices.cpp
Backend/h/: adsr.h  config.h  mainModule.h  metrices.h  modelModule.h  module.h  paths.h  samplesModule.h  signal.h  synthModule.h  synthPipe.h  synthVoice.h  testModule.h  voices.h
Backend/lib/: miniaudio.h
Backend/local/samples/: instrument
Backend/local/samples/prinzipal-8/: script.py
Backend/local/test/: temp.json
Backend/python/: __init__.py  organ.cp312-win_amd64.ilk  organ.cp312-win_amd64.pyd
Experiments/: 1.json  2.json  model.json  sample.json  synth.json
Experiments/src/: experiments.py
Frontend/: auto_test.py  engine.py  main.py  metrices.py  test_worker.py  widgets.py
